<?xml version="1.0"?>
<package format="3">
  <name>mu_bringup</name>
  <version>0.0.1</version>
  <description>bringup</description>
  <maintainer email="chsim@iglim.net">chsim</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>